# ml-pipeline-tutorial

./: .gitignore  README.md  main.py  makefile  pyproject.toml
.github/: pull_request_template.md
model/: eval_inference.py  feature_extracton.py  train.py
pipeline_ph1/: README.md
pipeline_ph1/components/: eval_predict.py  query_bigquery.py  split.py  train_lightgbm.py
pipeline_ph1/pipelines/: house_prices_pipeline.py
pipeline_ph1/pipelines/sql/: train_table.sql
pipeline_ph2/components/: feature_engineering.py  train_lightgbm.py
pipeline_ph2/pipelines/: house_prices_pipeline.py
pipeline_ph2/src/: .dockerignore  Dockerfile  query_bigquery.py  split.py  train_lightgbm.py
pipeline_ph2/src/model/: eval_inference.py  feature_extracton.py  train.py
pipeline_ph2/src/util/: loadutil.py
pipelines/: house_prices_pipeline.py
pipelines/components/eval_predict/: component.py
pipelines/components/feature_engineering/: component.py
pipelines/components/train_lightgbm/: component.py
pipelines/sql/: train_table.sql
terraform/: main.tf  variables.tf
terraform/modules/artifact_registry/: main.tf  variables.tf
terraform/modules/database/: main.tf
terraform/modules/gcs/: main.tf  variables.tf
terraform/modules/vertex_ai/: iam.tf
